[gd_scene load_steps=23 format=2]

[ext_resource path="res://Player/Scenes/ScreenShakeController.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy/Bosses/Caves/Scripts/GroundSweep.gd" type="Script" id=2]
[ext_resource path="res://Enemy/Bosses/Caves/Scripts/SummonBats.gd" type="Script" id=3]
[ext_resource path="res://Enemy/EnemyHitbox.gd" type="Script" id=4]
[ext_resource path="res://Enemy/Bosses/Caves/Scripts/VerticalBats.gd" type="Script" id=5]
[ext_resource path="res://Enemy/Bosses/Caves/Scripts/HorizontalBats.gd" type="Script" id=6]
[ext_resource path="res://Enemy/Bosses/Caves/Assets/GiantBat.png" type="Texture" id=7]
[ext_resource path="res://addons/kenney_particle_pack/smoke_04.png" type="Texture" id=8]
[ext_resource path="res://addons/kenney_particle_pack/smoke_01.png" type="Texture" id=9]
[ext_resource path="res://addons/kenney_particle_pack/smoke_07.png" type="Texture" id=10]
[ext_resource path="res://Enemy/Bosses/Caves/Scripts/GiantBat.gd" type="Script" id=11]

[sub_resource type="ParticlesMaterial" id=1]
lifetime_randomness = 0.2
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.5
angular_velocity = 10.0
angular_velocity_random = 1.0
orbit_velocity = 0.5
orbit_velocity_random = 1.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13, 6 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12.5, 5.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 15, 7 )

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 25 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 96, -6 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "Death"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23, 24, 25 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Spawn"
length = 5.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 96, -56 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.2, 1.4, 1.6, 2.6, 2.8, 3, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 3, 2, 1, 0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 5.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_animation_over"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("ScreenShakeController")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.5, 2.5 ],
"method": "shake"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SmokeParticles:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 3.5, 4.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SmokeParticles2:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 3.6, 4.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("SmokeParticles3:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 3.7, 4.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 4.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=9]
resource_name = "Hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 3 ]
}

[sub_resource type="Animation" id=10]
resource_name = "GroundSweepLeft"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Hitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Hurtbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("..:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 130, -6 ), Vector2( 130, -6 ), Vector2( -34, -6 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "GroundSweepRight"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Hitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Hurtbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("..:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2, -6 ), Vector2( -2, -6 ), Vector2( 162, -6 ) ]
}

[node name="GiantBat" type="KinematicBody2D" groups=[
"Boss",
]]
position = Vector2( 162, -6 )
collision_layer = 4
script = ExtResource( 11 )
phase1_attack_cooldown = 3
phase1_transition_cooldown = 1
phase1_health = 5

[node name="ScreenShakeController" parent="." instance=ExtResource( 1 )]

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -2 )
texture = ExtResource( 7 )
flip_h = true
hframes = 12
frame = 11

[node name="SmokeParticles" type="Particles2D" parent="."]
scale = Vector2( 0.1, 0.1 )
emitting = false
amount = 15
one_shot = true
explosiveness = 0.3
process_material = SubResource( 1 )
texture = ExtResource( 8 )

[node name="SmokeParticles2" type="Particles2D" parent="."]
scale = Vector2( 0.1, 0.1 )
emitting = false
amount = 15
one_shot = true
explosiveness = 0.3
process_material = SubResource( 1 )
texture = ExtResource( 9 )

[node name="SmokeParticles3" type="Particles2D" parent="."]
scale = Vector2( 0.1, 0.1 )
emitting = false
amount = 15
one_shot = true
explosiveness = 0.3
process_material = SubResource( 1 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32
script = ExtResource( 4 )
damage = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )
disabled = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/AlreadyDead = SubResource( 5 )
anims/Death = SubResource( 6 )
anims/Idle = SubResource( 7 )
anims/Spawn = SubResource( 8 )

[node name="HurtAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 9 )

[node name="Phase1Cooldown" type="Timer" parent="."]
one_shot = true

[node name="Phase2Cooldown" type="Timer" parent="."]
one_shot = true

[node name="Phase3Cooldown" type="Timer" parent="."]
one_shot = true

[node name="HorizontalBats" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="VerticalBats" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="GroundSweep" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="GroundSweep"]
anims/GroundSweepLeft = SubResource( 10 )
anims/GroundSweepRight = SubResource( 11 )

[node name="SummonBats" type="Node2D" parent="."]
script = ExtResource( 3 )
amount_of_bats = 4
bat_spawn_delay = 0.5

[node name="BatSpawnTimer" type="Timer" parent="SummonBats"]
one_shot = true

[node name="GroundSlam" type="Node2D" parent="."]

[node name="SummonRedBats" type="Node2D" parent="."]

[node name="BatSpawnTimer" type="Timer" parent="SummonRedBats"]
one_shot = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="Phase1Cooldown" to="." method="_on_Phase1Cooldown_timeout"]
[connection signal="timeout" from="Phase2Cooldown" to="." method="_on_Phase2Cooldown_timeout"]
[connection signal="timeout" from="Phase3Cooldown" to="." method="_on_Phase3Cooldown_timeout"]
[connection signal="timeout" from="SummonBats/BatSpawnTimer" to="SummonBats" method="_on_BatSpawnTimer_timeout"]
[connection signal="timeout" from="SummonRedBats/BatSpawnTimer" to="SummonRedBats" method="_on_BatSpawnTimer_timeout"]
